migration-result/ver/16.x/choose-an-edition/teleport-cloud/downloads.mdx
---
title: Teleport Enterprise Cloud Downloads
description: Cloud Downloads
version: '16.x'
---

Teleport Enterprise Cloud is currently running Teleport 14.3.3. We recommend
running Teleport agents at Teleport 14.3.3 or one major version
below.

## Teleport package repositories

Teleport currently maintains DEB and RPM package repositories. Follow these
instructions to add a package repository and install Teleport.

Binaries include:

| Binary Name        | Purpose                                                                                                                            |
| ------------------ | ---------------------------------------------------------------------------------------------------------------------------------- |
| `teleport`         | The Teleport binary that you can run within your private networks to enable access to resources in your infrastructure             |
| `tbot`             | The agent for [Teleport's Machine ID](/ver/16.x/machine-id/introduction)                                                           |
| `teleport-upgrade` | The [automatic agent updater](/ver/16.x/architecture/agent-update-management) that keeps your Teleport agent automatically updated |
| `tctl`             | A client tool for managing Teleport resources                                                                                      |
| `tsh`              | A client tool for accessing resources within your cluster                                                                          |

<Tabs>
  <Tab title="Debian 9+/Ubuntu 16.04+ (apt)">
    Add the Teleport repository to your repository list:

    ```code
    # Download Teleport's PGP public key
    $ sudo curl https://apt.releases.teleport.dev/gpg \
    -o /usr/share/keyrings/teleport-archive-keyring.asc
    # Source variables about OS version
    $ source /etc/os-release
    # Add the Teleport APT repository for cloud.
    $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
    https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
    | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

    $ sudo apt-get update
    $ sudo apt-get install teleport-ent=14.3.3
    $ sudo apt-get install teleport-ent-updater
    ```
  </Tab>

  <Tab title="Amazon Linux 2/RHEL 7/CentOS 7 (yum)">
    ```code
    # Source variables about OS version
    $ source /etc/os-release
    # Add the Teleport YUM repository for cloud.
    # First, get the OS major version from $VERSION_ID so this fetches the correct
    # package version.
    $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
    $ sudo yum install -y yum-utils
    $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"
    $ sudo yum install teleport-ent-14.3.3
    $ sudo yum install teleport-ent-updater
    #
    # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
    # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
    ```
  </Tab>

  <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
    ```code
    # Source variables about OS version
    $ source /etc/os-release
    # Add the Teleport YUM repository for cloud.
    # First, get the OS major version from $VERSION_ID so this fetches the correct
    # package version.
    $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
    # Use the dnf config manager plugin to add the teleport RPM repo
    $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-yum.repo")"

    # Install teleport
    $ sudo dnf install teleport-ent-14.3.3
    $ sudo dnf install teleport-ent-updater

    # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
    # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
    ```
  </Tab>

  <Tab title="SLES 12 SP5+ and 15 SP5+ (zypper)">
    ```code
    # Source variables about OS version
    $ source /etc/os-release
    # Add the Teleport Zypper repository for cloud.
    # First, get the OS major version from $VERSION_ID so this fetches the correct
    # package version.
    $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
    # Use Zypper to add the teleport RPM repo
    $ sudo zypper addrepo --refresh --repo $(rpm --eval "https://zypper.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport-zypper.repo")

    # Install teleport
    $ sudo zypper install teleport-ent=14.3.3
    $ sudo zypper install teleport-ent-updater
    ```
  </Tab>
</Tabs>

## Teleport client tools

Teleport client tools are available for managing Teleport resources and accessing
resources within your cluster. These are tools meant to be deployed on users' workstations.

Binaries include:

| Binary Name | Purpose                                                   |
| ----------- | --------------------------------------------------------- |
| `tctl`      | A client tool for managing Teleport resources             |
| `tsh`       | A client tool for accessing resources within your cluster |

For macOS, `tsh` comes in the main Teleport package and also in a separate `tsh`-only package.
The `tsh`-only package includes a signed variant of `tsh`. Certain functionality, such as Touch ID support,
only works when `tsh` has been signed. Therefore, if you are installing the main Teleport package on a macOS system,
we recommend you first install the main Teleport package and then install the `tsh`-only package over this.

### Binary installation

The following archives contain the client tool binaries.

Here are the available archives:

| Description                        |                                                                                                    |                                                                                |                                                                                |                                                                            |
| ---------------------------------- | -------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ | ------------------------------------------------------------------------------ | -------------------------------------------------------------------------- |
| Linux (Debian/Ubuntu compatible)   | [amd64](https://cdn.teleport.dev/teleport-ent-v14.3.3-linux-amd64-bin.tar.gz)                      | [arm64](https://cdn.teleport.dev/teleport-ent-v14.3.3-linux-arm64-bin.tar.gz)  | [armv7](https://cdn.teleport.dev/teleport-ent-v14.3.3-linux-arm-bin.tar.gz)    | [i386](https://cdn.teleport.dev/teleport-ent-v14.3.3-linux-386-bin.tar.gz) |
| Linux (RHEL/CentOS 7.x compatible) | [amd64](https://cdn.teleport.dev/teleport-ent-v14.3.3-linux-amd64-centos7-bin.tar.gz)              |                                                                                |                                                                                |                                                                            |
| macOS                              | [universal amd64/arm64](https://cdn.teleport.dev/teleport-ent-v14.3.3-darwin-universal-bin.tar.gz) | [amd64](https://cdn.teleport.dev/teleport-ent-v14.3.3-darwin-amd64-bin.tar.gz) | [arm64](https://cdn.teleport.dev/teleport-ent-v14.3.3-darwin-arm64-bin.tar.gz) |                                                                            |

### Package installation

The following packages allow you to use your operating system's package manager
to install the client tools.

Here are the available archives:

| Description           |                                                                           |                                                                   |                                                                 |                                                                 |
| --------------------- | ------------------------------------------------------------------------- | ----------------------------------------------------------------- | --------------------------------------------------------------- | --------------------------------------------------------------- |
| Linux Debian Packages | [amd64](https://cdn.teleport.dev/teleport-ent_14.3.3_amd64.deb)           | [arm64](https://cdn.teleport.dev/teleport-ent_14.3.3_arm64.deb)   | [armv7](https://cdn.teleport.dev/teleport-ent_14.3.3_arm.deb)   | [i386](https://cdn.teleport.dev/teleport-ent_14.3.3_i386.deb)   |
| Linux RPM Packages    | [amd64](https://cdn.teleport.dev/teleport-ent-14.3.3-1.x86_64.rpm)        | [arm64](https://cdn.teleport.dev/teleport-ent-14.3.3-1.arm64.rpm) | [armv7](https://cdn.teleport.dev/teleport-ent-14.3.3-1.arm.rpm) | [i386](https://cdn.teleport.dev/teleport-ent-14.3.3-1.i386.rpm) |
| macOS Packages        | [universal amd64/arm64](https://cdn.teleport.dev/teleport-ent-14.3.3.pkg) |                                                                   |                                                                 |                                                                 |

### Teleport tsh-only packages

`tsh`-only packages contain only the `tsh` binary.

Binaries include:

| Binary | Purpose                                                   |
| ------ | --------------------------------------------------------- |
| `tsh`  | A client tool for accessing resources within your cluster |

Here are the available archives:

| Description    |                                                                          |
| -------------- | ------------------------------------------------------------------------ |
| macOS (signed) | [universal amd64/arm64 signed](https://cdn.teleport.dev/tsh-14.3.3.pkg)  |
| Windows        | [amd64](https://cdn.teleport.dev/teleport-v14.3.3-windows-amd64-bin.zip) |
